# my_automation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  tmp_cpu_model_names.csv
.github/actions/install_python_dependencies/: action.yml
.github/workflows/: etf_analysis.yml  stock_news_crawler.yml  stock_price_notification.yml  weekly_vgchartz_report.yml
docs/geekbench_report/: EDUCATION.md  README.md  SCHEMA.md
src/app/geekbench_report/: README.md  SCHEMA.md  sync_cpu_model_benchmark_to_pg.py  sync_cpu_model_detail_to_pg.py  sync_cpu_model_name_to_pg.py  sync_cpu_model_result_to_pg.py  sync_pg_to_googlesheets.py  tmp_sync_cpu_model_result_to_pg.py
src/app/stock_news/: etf_analysis.py  stock_analysis.py  stock_news_crawler.py  stock_price_notification.py
src/app/vgchartz/: vgchartz_crawler.py
src/app/vgchartz_crawler/: vgchartz_crawler.py
src/utils/common/: bigquery_utility.py  database_utility.py  googlesheets_utility.py
src/utils/geekbench_report/: core.py  database_helper.py
src/utils/geekbench_report/core/: geekbench_processor_benchmark_scraper.py  geekbench_processor_detail_scraper.py  geekbench_processor_name_scraper.py  geekbench_processor_result_scraper.py
src/utils/geekbench_report/sql/: mart_average_score_and_benchmark_score.py
tmp/stock_news/: test_yfinance.ipynb
